--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
     "express-handlebars": "^5.3.3",
     "mongoose": "^7.4.3",
     "nodemon": "^3.0.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.47.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "prettier": "^3.0.2"
   }
 }
